--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="angelini.domotica.manual.HomeFragment"
+        android:name="angelini.domotica.ui.home.HomeFragment"
         android:label="fragment_main_list"
         tools:layout="@layout/fragment_home" />
 </navigation>
