--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,4 +10,4 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.home.HomeFragment"
-    tools:listitem="@layout/fragment_home_room_item" />
+    tools:listitem="@layout/list_item_room" />
