--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -10,4 +10,4 @@ android:layout_marginLeft="16dp"
 android:layout_marginRight="16dp"
 app:layoutManager="LinearLayoutManager"
 tools:context=".ui.room.RoomFragment"
-tools:listitem="@layout/list_item_device" />
+tools:listitem="@layout/list_item_device_unknown" />
