--- a/app/src/main/res/layout/list_item_device_unknown.xml
+++ b/app/src/main/res/layout/list_item_device_unknown.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_device"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     card_view:cardElevation="10dp"
     card_view:cardCornerRadius="20dp"
     card_view:cardBackgroundColor="@color/white"
@@ -17,8 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="40sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Unknown device"
+        android:textSize="30sp"
         android:textStyle="bold" />
 </androidx.cardview.widget.CardView>
