--- a/app/src/main/res/layout/list_item_device_lamp.xml
+++ b/app/src/main/res/layout/list_item_device_lamp.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view_device"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view_device_lamp"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    card_view:cardElevation="10dp"
-    card_view:cardCornerRadius="20dp"
+    android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@color/white"
+    card_view:cardCornerRadius="20dp"
+    card_view:cardElevation="10dp"
     card_view:cardMaxElevation="12dp"
     card_view:cardPreventCornerOverlap="true"
-    card_view:cardUseCompatPadding="true"    >
+    card_view:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:srcCompat="@android:drawable/btn_star_big_on" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/device_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="40sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/lamp_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            tools:text="Lampada"/>
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switch_lamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"/>
+
+    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
