--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,8 +13,8 @@
             android:icon="@drawable/ic_menu_settings"
             android:title="@string/menu_settings" />
         <item
-            android:id="@+id/nav_rules"
+            android:id="@+id/nav_login"
             android:icon="@drawable/ic_menu_rules"
-            android:title="@string/menu_rules" />
+            android:title="@string/menu_login" />
     </group>
 </menu>
