--- a/app/src/main/res/layout/list_item_device_temperature.xml
+++ b/app/src/main/res/layout/list_item_device_temperature.xml
@@ -12,14 +12,8 @@
     card_view:cardPreventCornerOverlap="true"
     card_view:cardUseCompatPadding="true"    >
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        card_view:srcCompat="@android:drawable/ic_delete" />
-
     <TextView
-        android:id="@+id/device_name"
+        android:id="@+id/temperature_sensor_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
