--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -85,7 +85,7 @@
         android:text="@string/username_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constrainTop_toTopOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/edittext_username"/>
 
     <TextView
         android:id="@+id/textview_password"
