--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -18,8 +18,7 @@
     <fragment
         android:id="@+id/nav_settings"
         android:name="angelini.domotica.ui.settings.SettingsFragment"
-        android:label="@string/menu_settings"
-        tools:layout="@layout/fragment_settings" />
+        android:label="@string/menu_settings" />
 
     <fragment
         android:id="@+id/nav_login"
