--- a/app/src/main/res/layout/list_item_device_unknown.xml
+++ b/app/src/main/res/layout/list_item_device_unknown.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:text="Unknown device"
+        android:text="@string/device_unknown"
         android:textSize="30sp"
         android:textStyle="bold" />
 </androidx.cardview.widget.CardView>
