--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,6 +15,6 @@
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_menu_rules"
-            android:title="@string/menu_logout" />
+            android:title="@string/menu_login" />
     </group>
 </menu>
