--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/nav_login"
         android:name="angelini.domotica.ui.login.LoginFragment"
-        android:label="@string/menu_logout"
+        android:label="@string/menu_login"
         tools:layout="@layout/fragment_login" />
     <fragment
         android:id="@+id/nav_room"
