--- a/app/src/main/res/drawable-v24/side_nav_bar.xml
+++ b/app/src/main/res/drawable-v24/side_nav_bar.xml
@@ -4,6 +4,6 @@
         android:angle="135"
         android:centerColor="?attr/colorSecondary"
         android:endColor="?attr/colorAccent"
-        android:startColor="?attr/colorPrimary"
+        android:startColor="?attr/colorPrimarySurface"
         android:type="linear" />
 </shape>
