--- a/app/src/main/res/layout/list_item_room.xml
+++ b/app/src/main/res/layout/list_item_room.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    card_view:cardElevation="10dp"
-    card_view:cardCornerRadius="20dp"
-    card_view:cardBackgroundColor="@color/white"
-    card_view:cardMaxElevation="12dp"
-    card_view:cardPreventCornerOverlap="true"
-    card_view:cardUseCompatPadding="true"    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="5dp">
+
 
     <ImageView
         android:id="@+id/room_image"
@@ -31,4 +27,4 @@
         android:textSize="20sp"
         android:textStyle="bold"
         />
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
