--- a/app/src/main/res/layout/list_item_device_temperature.xml
+++ b/app/src/main/res/layout/list_item_device_temperature.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view_device"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    card_view:cardElevation="10dp"
-    card_view:cardCornerRadius="20dp"
-    card_view:cardBackgroundColor="@color/white"
-    card_view:cardMaxElevation="12dp"
-    card_view:cardPreventCornerOverlap="true"
-    card_view:cardUseCompatPadding="true"    >
-
-    <TextView
+    android:layout_height="wrap_content"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="5dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="UseCompoundDrawables">
+        <TextView
         android:id="@+id/temperature_sensor_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,4 +20,5 @@
         android:layout_marginBottom="20dp"
         android:textSize="40sp"
         android:textStyle="bold" />
-</androidx.cardview.widget.CardView>
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
