--- a/app/src/main/res/layout/list_item_device_unknown.xml
+++ b/app/src/main/res/layout/list_item_device_unknown.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view_device"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardElevation="10dp"
-    card_view:cardCornerRadius="20dp"
-    card_view:cardBackgroundColor="@color/white"
-    card_view:cardMaxElevation="12dp"
-    card_view:cardPreventCornerOverlap="true"
-    card_view:cardUseCompatPadding="true"    >
-
+    app:cardUseCompatPadding="true"
+    app:cardElevation="5dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="UseCompoundDrawables">
     <TextView
         android:id="@+id/device_name"
         android:layout_width="wrap_content"
@@ -22,4 +21,5 @@
         android:text="@string/device_unknown"
         android:textSize="30sp"
         android:textStyle="bold" />
-</androidx.cardview.widget.CardView>
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
