--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,45 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".ui.login.LoginFragment">
 
-    <Button
-        android:id="@+id/button_clean"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="@string/button_clean_text"
-        app:layout_constraintBottom_toTopOf="@+id/button_prefill"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/edittext_password"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_password"
-        app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/button_prefill"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/textview_username"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="@string/button_prefill_text"
-        app:layout_constraintBottom_toTopOf="@+id/button_connect"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/edittext_password" />
-
-    <Button
-        android:id="@+id/button_connect"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="@string/button_connect_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_password"
-        app:layout_constraintHorizontal_bias="0.566"
-        app:layout_constraintStart_toStartOf="@+id/edittext_password" />
+        android:layout_marginTop="16dp"
+        android:text="@string/username_text"/>
 
     <EditText
         android:id="@+id/edittext_username"
@@ -54,10 +29,14 @@
         android:ems="15"
         android:hint="@string/username_text"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_username"
         tools:ignore="TextFields" />
+
+    <TextView
+        android:id="@+id/textview_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/password_text"/>
 
     <EditText
         android:id="@+id/edittext_password"
@@ -72,28 +51,25 @@
         android:ems="15"
         android:hint="@string/password_text"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_password"
         tools:ignore="TextFields" />
 
-    <TextView
-        android:id="@+id/textview_username"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_clean"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/username_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/edittext_username"/>
+        android:layout_marginBottom="16dp"
+        android:text="@string/button_clean_text" />
 
-    <TextView
-        android:id="@+id/textview_password"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_prefill"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/password_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_username" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginBottom="16dp"
+        android:text="@string/button_prefill_home_one_text"
+        android:layout_width="100dp"/>
+
+    <Button
+        android:id="@+id/button_connect"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="@string/button_connect_text"  android:layout_width="100dp"/>
+</LinearLayout>
