--- a/app/src/main/res/layout/list_item_device_movement.xml
+++ b/app/src/main/res/layout/list_item_device_movement.xml
@@ -10,23 +10,24 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="UseCompoundDrawables">
-    <ImageView
-        android:id="@+id/movement_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_sensor_movement_undetected"
-        android:contentDescription="movement status"/>
-    <TextView
-        android:id="@+id/movement_sensor_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="40sp"
-        android:textStyle="bold" />
+        tools:ignore="UseCompoundDrawables"
+        android:layout_marginVertical="15dp">
+        <TextView
+            android:id="@+id/movement_sensor_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            tools:text="Movement"/>
+        <ImageView
+            android:id="@+id/movement_image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_sensor_movement_undetected"
+            android:contentDescription="image status icon"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
