--- a/app/src/main/res/layout/list_item_device_shutter.xml
+++ b/app/src/main/res/layout/list_item_device_shutter.xml
@@ -10,23 +10,22 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="UseCompoundDrawables">
+        android:layout_gravity="center"
+        tools:ignore="UseCompoundDrawables"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="15dp">
         <TextView
             android:id="@+id/shutter_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:textSize="40sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             tools:text="Shutter"/>
-
         <SeekBar
             android:id="@+id/seekBar_shutter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="48dp" />
-
+            android:layout_marginStart="30dp"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
