--- a/app/src/main/res/layout/list_item_device_temperature.xml
+++ b/app/src/main/res/layout/list_item_device_temperature.xml
@@ -7,18 +7,13 @@
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="UseCompoundDrawables">
-        <TextView
+    <TextView
         android:id="@+id/temperature_sensor_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="40sp"
-        android:textStyle="bold" />
-    </LinearLayout>
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginVertical="15dp"
+        tools:text="Temperature 1: 20°C"/>
 </com.google.android.material.card.MaterialCardView>
