--- a/app/src/main/res/layout/list_item_device_unknown.xml
+++ b/app/src/main/res/layout/list_item_device_unknown.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="UseCompoundDrawables">
     <TextView
         android:id="@+id/device_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/device_unknown"
         android:textSize="30sp"
+        android:layout_marginVertical="15dp"
+        android:text="@string/device_unknown"
         android:textStyle="bold" />
-    </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
