Fixed colors on drawer for night

--- a/app/src/main/res/drawable-v24/side_nav_bar.xml
+++ b/app/src/main/res/drawable-v24/side_nav_bar.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="135"
         android:centerColor="?attr/colorSecondary"
-        android:endColor="?attr/colorAccent"
-        android:startColor="?attr/colorPrimarySurface"
+        android:endColor="?attr/colorSecondary"
+        android:startColor="?attr/colorPrimary"
         android:type="linear" />
 </shape>
